<resources>
    <string name="app_name">TZ_Workmate</string>
    <string name="generate_user">Generate user</string>
    <string name="select_gender">Select Gender:</string>
    <string name="select_nationality">Select Nationality:</string>
    <string name="button_back">btnBack</string>
    <string name="generate">GENERATE</string>
    <string name="user_image">user image</string>
    <string name="hi_how_are_you_today">Hi how are you today?</string>
    <string name="i_am">I\'m</string>
    <string name="main_info">Main Info</string>
    <string name="contacts">Contacts</string>
    <string name="email">Email</string>
    <string name="profile_email">Email:</string>
    <string name="location">Location</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="phone">Phone:</string>
    <string name="cell">Cell:</string>
    <string name="username">Username:</string>
    <string name="country">Country:</string>
    <string name="state">State:</string>
    <string name="city">City:</string>
    <string name="street">Street:</string>
    <string name="postcode">Postcode:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="nothing_found">Nothing was found for your request</string>
    <string name="db_nothing_found">Nothing was found.</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="ok">Ok</string>
    <string name="plus">+</string>
</resources>